--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,13 +1,10 @@
 <!DOCTYPE html>
-<html lang="en" data-bs-theme="auto">
+<html lang="en">
 
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
-    <meta name="generator" content="Astro v5.9.2">
-    <title>Signin Template · Bootstrap v5.3</title>
+    <title>Login - Todo App</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
     <link href="static/css/sign-in.css" rel="stylesheet">
@@ -19,7 +16,7 @@
             <h1 class="h3 mb-3 fw-normal text-center">Please sign in</h1>
             <div class="form-floating"> <input type="email" class="form-control" id="floatingInput"
                     placeholder="name@example.com"> <label for="floatingInput">Email address</label> </div>
-            <div class="form-floating"> <input type="password" class="form-control" id="floatingPassword"
+            <div class="form-floating"> <input type="password" class="form-control" id=" "
                     placeholder="Password"> <label for="floatingPassword">Password</label> </div>
             <div class="form-check text-start my-3"> <input class="form-check-input" type="checkbox" value="remember-me"
                     id="checkDefault"> <label class="form-check-label" for="checkDefault">
