--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -13,15 +13,12 @@
 <body class="d-flex align-items-center py-4 bg-body-tertiary">
     <main class="form-signin w-100 m-auto">
         <form>
-            <h1 class="h3 mb-3 fw-normal text-center">Please sign in</h1>
+            <h1 class="h3 mb-3 fw-normal text-center">My Todo App</h1>
             <div class="form-floating"> <input type="email" class="form-control" id="floatingInput"
                     placeholder="name@example.com"> <label for="floatingInput">Email address</label> </div>
             <div class="form-floating"> <input type="password" class="form-control" id=" "
                     placeholder="Password"> <label for="floatingPassword">Password</label> </div>
-            <div class="form-check text-start my-3"> <input class="form-check-input" type="checkbox" value="remember-me"
-                    id="checkDefault"> <label class="form-check-label" for="checkDefault">
-                    Remember me
-                </label> </div> <button class="btn btn-primary w-100 py-2" type="submit">Sign in</button>
+            <button class="btn btn-primary w-100 py-2" type="submit">Sign in</button>
         </form>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
