--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -12,7 +12,7 @@
 
 <body class="d-flex align-items-center py-4 bg-body-tertiary">
     <main class="form-signin w-100 m-auto">
-        <form>
+        <form method="post">
             <h1 class="h3 mb-3 fw-normal text-center">My Todo App</h1>
 
             {% if messages %}
@@ -30,9 +30,9 @@
             {% endif %}
 
 
-            <div class="form-floating"> <input type="email" class="form-control" id="floatingInput"
+            <div class="form-floating"> <input type="email" name="email" class="form-control" id="floatingInput"
                     placeholder="name@example.com"> <label for="floatingInput">Email address</label> </div>
-            <div class="form-floating"> <input type="password" class="form-control" id=" " placeholder="Password">
+            <div class="form-floating"> <input name="password" type="password" class="form-control" id="floatingPassword" placeholder="Password">
                 <label for="floatingPassword">Password</label> </div>
             <button class="btn btn-primary w-100 py-2" type="submit">Sign in</button>
         </form>
