finalized auth to spec

--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -30,7 +30,7 @@
             {% endif %}
 
 
-            <div class="form-floating"> <input type="email" name="email" class="form-control" id="floatingInput"
+            <div class="form-floating"> <input type="email" name="username" class="form-control" id="floatingInput"
                     placeholder="name@example.com"> <label for="floatingInput">Email address</label> </div>
             <div class="form-floating"> <input name="password" type="password" class="form-control" id="floatingPassword" placeholder="Password">
                 <label for="floatingPassword">Password</label> </div>
