--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -32,10 +32,19 @@
 
             <div class="form-floating"> <input type="email" name="username" class="form-control" id="floatingInput"
                     placeholder="name@example.com"> <label for="floatingInput">Email address</label> </div>
-            <div class="form-floating"> <input name="password" type="password" class="form-control" id="floatingPassword" placeholder="Password">
-                <label for="floatingPassword">Password</label> </div>
+            <div class="form-floating"> <input name="password" type="password" class="form-control"
+                    id="floatingPassword" placeholder="Password">
+                <label for="floatingPassword">Password</label>
+            </div>
             <button class="btn btn-primary w-100 py-2" type="submit">Sign in</button>
         </form>
+
+        <a href="/register" class="mt-4 text-muted">
+            <span class="mt-4">
+                Register here!
+            </span>
+
+        </a>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
