--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -40,7 +40,16 @@
                     id="floatingPasswordConfirm" placeholder="Confirm Password"> <label
                     for="floatingPasswordConfirm">Confirm Password</label> </div>
             <button class="btn btn-primary w-100 py-2 my-4" type="submit">Sign in</button>
+
+            <div class="text-end">
+                <a href="/login" class="mt-4 text-muted">
+                    <span class="mt-4">
+                        Back to login
+                    </span>
+                </a>
+            </div>
         </form>
+
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
