--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -32,7 +32,7 @@
           <i class="fa fa-cog"></i>
         </a>
         <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="profileMenu">
-          <li><a class="dropdown-item" href="/login">Logout</a></li>
+          <li><a class="dropdown-item" href="/logout">Logout</a></li>
         </ul>
       </div>
     </div>
